# inference-scaling-moo

./: .gitignore  .project-metadata.yaml  Inference_scaling_MOO.ipynb  LICENSE  README.md  catalog-entry.yaml  community-amp-catalog-default.yaml  config.yaml  install.sh  main.ipynb  main.py  optimization_scaling.ipynb  pyproject.toml  requirements.txt
01_Installer/: install.py  requirements.txt
02_MultiobjectiveOptimization/: Inference_scaling_MOO.ipynb  inference_scaling.py
02_MultiobjectiveOptimization/.ipynb_checkpoints/: Inference_scaling_MOO-checkpoint.ipynb
notebooks/: Inference_scaling_MOO.ipynb
src/: inference_scaling.py
