[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inference-scaling-moo"
version = "1.1.0"
description = "Monte Carlo-based optimization for inference scaling."
author = [{name = "Minseok Jung", email = "minseok.jung@cloudear.com"}]
dependencies = [
    "numpy",
    "matplotlib",
    "ipywidgets",
    "scipy",
    "pyyaml"
]
requires-python = ">=3.8"

[tool.setuptools]
packages = ["multiobjective_optimization"]
package_dir = {"multiobjective_optimization" = "02_MultiobjectiveOptimization"}